; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_decodecorpus.c_RAND_exp.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_decodecorpus.c_RAND_exp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UINT_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32*, double)* @RAND_exp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @RAND_exp(i32* %0, double %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store i32* %0, i32** %3, align 8
  store double %1, double* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call double @RAND(i32* %6)
  %8 = load i64, i64* @UINT_MAX, align 8
  %9 = sitofp i64 %8 to double
  %10 = fdiv double %7, %9
  store double %10, double* %5, align 8
  %11 = load double, double* %5, align 8
  %12 = fsub double 1.000000e+00, %11
  %13 = fptosi double %12 to i32
  %14 = call double @log(i32 %13)
  %15 = load double, double* %4, align 8
  %16 = fneg double %15
  %17 = fmul double %14, %16
  ret double %17
}

declare dso_local double @RAND(i32*) #1

declare dso_local double @log(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
